# Linda

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: data-format.md  plan-format.md
examples/: plan_en.yaml  plan_fr.yaml
examples/data/: education.yaml  identity.yaml  skills.yaml
examples/data/experiences/: acme-corp.yaml  globex.yaml
examples/data/projects/: taskflow.yaml  weatherly.yaml
linda/: cli.py
linda/cv_engine/: compiler.py  ingestor.py  loader.py  renderer.py  scorer.py
templates/: base_en.typ.j2  base_fr.typ.j2
tests/: test_cli.py
tests/cv_engine/: test_compiler.py  test_ingestor.py  test_loader.py  test_renderer.py  test_scorer.py
