[project]
name = "linda-cv"
version = "0.1.0"
description = "Modular CV generator: assemble YAML data blocks via a plan into Typst-rendered PDFs, with ATS keyword scoring against job offers."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{name = "Jimmy Fabre"}]
keywords = ["cv", "resume", "typst", "ats", "cli", "yaml", "pdf", "job-application"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Topic :: Text Processing :: Markup",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "requests>=2.32",
    "beautifulsoup4>=4.12",
    "pypdf>=4.0",
]

[project.urls]
Repository = "https://github.com/MysteurJim/linda-cv"

[project.scripts]
linda = "linda.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["linda"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.4"]
